# Hearts-of-iron

./: CMakeLists.txt  README.md  main.cpp
.baoyu-skills/baoyu-imagine/: EXTEND.md
.claude/: settings.local.json
.superpowers/brainstorm/1310-1781488046/content/: current-arch.html  design-approach.html  engine-architecture.html  final-structure.html  json-format.html  migration.html
.superpowers/brainstorm/1310-1781488046/state/: server-stopped
dlc/third_reich/: manifest.json
dlc/third_reich/chapters/: ch02_britain.json  ch03_wolf_pack.json  ch04_stalingrad.json
docs/superpowers/plans/: 2026-06-15-engine-refactor.md
docs/superpowers/specs/: 2026-06-15-engine-refactor-design.md
engine/: DiceSystem.cpp  DiceSystem.h  DlcManager.cpp  DlcManager.h  DlcTypes.h  MusicPlayer.cpp  MusicPlayer.h  NodeEngine.cpp  NodeEngine.h  PlayerSystem.cpp  PlayerSystem.h  SaveManager.cpp  SaveManager.h
ui/: CharacterCreateWidget.cpp  CharacterCreateWidget.h  GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  MenuWidget.cpp  MenuWidget.h  SaveLoadDialog.cpp  SaveLoadDialog.h
提交材料/: 实习论文_钢铁意志_第三帝国的黄昏.docx  实习论文_钢铁意志_第三帝国的黄昏.tex
提交材料/slide-deck/defense-presentation/: outline.md
提交材料/slide-deck/defense-presentation/prompts/: 01-slide-cover.md  02-slide-agenda.md  03-slide-project-overview.md  04-slide-architecture.md  05-slide-core-systems.md  06-slide-ui-and-effects.md  07-slide-problems-and-improvements.md  08-slide-back-cover.md
